# task-planning-api

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: a7a417b0462b_initial_schema.py
app/: main.py
app/api/v1/: auth.py  dependencies.py  projects.py  tasks.py  users.py
app/core/: auth.py  config.py  logging.py
app/db/: schema.py  session.py
app/domain/: constants.py  enums.py  policy.py
app/exceptions/: base_exceptions.py  project_exceptions.py  task_exceptions.py  user_exceptions.py
app/models/: common.py  projects.py  tasks.py  users.py
app/repository/: base_repository.py  project_repository.py  task_repository.py  user_repository.py
app/services/: project_service.py  task_service.py  user_service.py
scripts/: seed.py
tests/: test_db.py
tests/api/: conftest.py
tests/api/v1/: conftest.py  test_auth.py  test_listing_contract.py  test_project.py  test_task.py  test_users.py
